hphp/hack/test/typecheck/expression_trees/shapes/shape_put_wrong.php.exp
ERROR: File "shape_put_wrong.php", line 9, characters 10-152:
Invalid return type (Typing[4110])
  File "shape_put_wrong.php", line 8, characters 33-42:
  Expected `int`
  File "expr_tree.php", line 143, characters 38-41:
  But got `bool`
ERROR: File "shape_put_wrong.php", line 19, characters 5-47:
Too many arguments (expected 3 but got 4) (Typing[4105])
  File "Shapes.hhi", line 108, characters 28-30:
  Definition is here
ERROR: File "shape_put_wrong.php", line 22, characters 5-32:
Too few arguments (required 3 but got 1) (Typing[4104])
  File "Shapes.hhi", line 108, characters 28-30:
  Definition is here
ERROR: File "shape_put_wrong.php", line 25, characters 34-39:
Shape access requires a string literal, integer literal, or a class constant (Typing[4051])
ERROR: File "shape_put_wrong.php", line 28, characters 5-37:
You are trying to access the method `__unwrap` but this is a string (Typing[4062])
  File "expr_tree.php", line 146, characters 40-45:
  Definition is here
